appId: com.qazandoqafood
---
- launchApp
- tapOn:
    id: email
- assertVisible:
    id: email
- inputText: teste@teste.com
- tapOn:
    id: password
- inputText: 123456
- tapOn:
    id: login-button
- assertVisible: "Pastelaria da Maria"